# printers

./: .gitignore  apps_and_configs.md  menu_management.md  stations_kitchen_priter_manage.md
cloud-server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
cloud-server/config/: urls.py
cloud-server/config/settings/: __init__.py  base.py  development.py  production.py
cloud-server/core/: admin.py  authentication.py  models.py  tests.py  urls.py  views.py
cloud-server/core/migrations/: 0001_initial.py  0002_printroute_drop_legacy_fields.py  0003_alter_staffuser_role.py  0004_locationnode_cluster_reported_at.py  0005_staffuser_location.py  0006_restaurant_jwt_signing_secret.py  0007_staffattendance.py  0008_locationnode_unique_node_id_global.py  0009_geofence_attendance_geo.py  0010_remove_locationnode_uniq_location_node.py  0011_staffattendance_clock_out_distance.py
cloud-server/core/services/: active_lease_service.py  sync_service.py  (+4 more)
cloud-server/inventory/: AUDIT.md  admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
cloud-server/menu/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
cloud-server/orders/: admin.py  models.py  serializers.py  urls.py  views.py
cloud-server/super_admin/: admin.py  models.py  tests.py  urls.py  views.py
cloud-server/tables/: admin.py  models.py  urls.py  views.py
cloud-server/templates/: base.html
cloud-server/user_app/: urls.py  views.py
cloud-server/waiter_app/: apps.py  tests.py  urls.py  views.py
(+182 files in other folders)
