[project]
name = "cloud-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-cors-headers>=4.3",
    "djangorestframework>=3.15",
    "gunicorn>=22.0",
    "pillow>=10.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "whitenoise>=6.6",
]
